<resources>
    <string name="app_name">Seek</string>
    <string name="mess">Mess</string>
    <string name="menu">Menu:</string>
    <string name="reason">Reason:</string>
    <string name="room">Room No:</string>
    <string name="phone">Phone No:</string>
    <string name="email">Email ID:</string>
    <string name="request">Send Request</string>
    <string name="smoothie">Smoothie Zone</string>
    <string name="order">Order:</string>
    <string name="location">Location:</string>
    <string name="place">Place Order</string>
    <string name="kareem">Al-Kareem</string>
    <string name="lazeez">Lazeez</string>

    <string name="book" />

    <string-array name="places">
        <item>Gate</item>
        <item>Ground</item>
        <item>Gateway Building</item>
        <item>Dhaba</item>
        <item>New Building</item>
        <item>Faculty Housing</item>
        <item>T2</item>
        <item>D Cafe(Mess)</item>
        <item>Appt C</item>
        <item>Appt B</item>
        <item>Appt A</item>
        <item>Laundry</item>
        <item>Old Tower</item>
        <item>Falhar</item>
        <item>Workshop</item>
        <item>Library/Area 51</item>
        <item>Volleyball Court</item>
        <item>Pond Area</item>
    </string-array>
</resources>